--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
+    "react-to-print": "^3.1.0",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
